src/snapshots/lakonik__parser__tests__parse_statement_snapshot@qwen3_edit_foo_$(find_._|_grep_hello_|_grep_py)_bar.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 51
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 51
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 51
  name: edit
parts:
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 11
        end:
          line: 1
          offset: 51
      text: foo
  - InlineShell:
      type: inline_shell
      range:
        start:
          line: 1
          offset: 15
        end:
          line: 1
          offset: 51
      code: find . | grep hello | grep py
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 48
        end:
          line: 1
          offset: 51
      text: bar
