src/snapshots/lakonik__parser__tests__parse_statement_snapshot@qwen3_edit_foo_@hello.txt_bar.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 29
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 29
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 29
  name: edit
parts:
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 11
        end:
          line: 1
          offset: 29
      text: foo
  - FilePath:
      type: filepath
      range:
        start:
          line: 1
          offset: 15
        end:
          line: 1
          offset: 29
      path: hello.txt
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 26
        end:
          line: 1
          offset: 29
      text: bar
